// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.project references @roots/bud-babel 2 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-babel",
  "peerDependencies": Object {
    "@babel/core": "^7.16.10",
    "@babel/plugin-proposal-class-properties": "^7.16.0",
    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
    "@babel/plugin-transform-runtime": "^7.16.4",
    "@babel/preset-env": "^7.16.4",
    "babel-loader": "^8.2.3",
    "babel-plugin-add-module-exports": "^1.0.4",
  },
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-babel: extension 1`] = `"extension"`;

exports[`bud.project references @roots/bud-entrypoints 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-entrypoints",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-entrypoints 2`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-entrypoints",
  "peerDependencies": Object {},
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-eslint 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-eslint",
  "peerDependencies": Object {
    "eslint": Any<String>,
  },
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-postcss 1`] = `
Object {
  "bud": Object {
    "type": "extension",
  },
  "name": "@roots/bud-postcss",
  "peerDependencies": Object {
    "postcss": Any<String>,
    "postcss-import": Any<String>,
    "postcss-nested": Any<String>,
    "postcss-preset-env": Any<String>,
  },
  "requires": Array [],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-preset-recommend 1`] = `
Object {
  "bud": Object {
    "peers": Array [
      "@roots/bud-babel",
      "@roots/bud-entrypoints",
      "@roots/bud-postcss",
    ],
    "type": "extension",
  },
  "name": "@roots/bud-preset-recommend",
  "peerDependencies": Object {},
  "requires": Array [
    Array [
      "@roots/bud-babel",
      Any<String>,
    ],
    Array [
      "@roots/bud-entrypoints",
      Any<String>,
    ],
    Array [
      "@roots/bud-postcss",
      Any<String>,
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references @roots/bud-tailwindcss 1`] = `
Object {
  "bud": Object {
    "peers": Array [
      "@roots/bud-postcss",
    ],
    "type": "extension",
  },
  "name": "@roots/bud-tailwindcss",
  "peerDependencies": Object {
    "tailwindcss": Any<String>,
  },
  "requires": Array [
    Array [
      "@roots/bud-postcss",
      Any<String>,
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;

exports[`bud.project references the root package 1`] = `
Object {
  "browserslist": Array [
    "extends @wordpress/browserslist-config",
  ],
  "bud": null,
  "devDependencies": Object {
    "@roots/bud": "workspace:*",
    "@roots/bud-babel": "workspace:*",
    "@roots/bud-eslint": "workspace:*",
    "@roots/bud-postcss": "workspace:*",
    "@roots/bud-preset-recommend": "workspace:*",
    "@roots/bud-tailwindcss": "workspace:*",
  },
  "name": "root",
  "private": true,
  "requires": Array [
    Array [
      "@roots/bud",
      "workspace:*",
    ],
    Array [
      "@roots/bud-babel",
      "workspace:*",
    ],
    Array [
      "@roots/bud-eslint",
      "workspace:*",
    ],
    Array [
      "@roots/bud-postcss",
      "workspace:*",
    ],
    Array [
      "@roots/bud-preset-recommend",
      "workspace:*",
    ],
    Array [
      "@roots/bud-tailwindcss",
      "workspace:*",
    ],
  ],
  "resolvable": true,
  "version": Any<String>,
}
`;
